--- a/firebase.json
+++ b/firebase.json
@@ -5,12 +5,27 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
+  },
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "aman-singh-ff244",
+          "appId": "1:591066052512:android:a853caf2514b26d40a96c5",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "aman-singh-ff244",
+          "configurations": {
+            "android": "1:591066052512:android:a853caf2514b26d40a96c5",
+            "ios": "1:591066052512:ios:45cc3255aec15bca0a96c5",
+            "web": "1:591066052512:web:2c95d689fd513f890a96c5"
+          }
+        }
+      }
+    }
   }
 }
