--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_svg: ^2.1.0
   url_launcher: ^6.3.1
   url_strategy: ^0.3.0
+  firebase_core: ^3.14.0
+  cloud_firestore: ^5.6.9
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
